--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,7 @@
 
 nav {
     font-family: 'Raleway', sans-serif;
-    
 }
-
 
 section {
     width: 100%;
@@ -17,7 +15,7 @@ section {
 
 .jumbotron {
     height: 400px;
-    background-image: url("../img/bg1.jpg");
+    background-image: url("../img/bg1b.jpg");
     background-size: cover;
     background-position: center;
 }
